ctsem news:

26/1/2023
####3.7.6####
- Fix compile error for some higher dimensional non-linear models
- Fix NaN gradient error for certain non-linear measurement error models. 
- Use Rstantools for compile specification to ensure future compatibility. 

1/7/2022
####3.7.0####
- Fix some plotting features, speed up random effects a little.

9/3/2022
#### 3.6.0 ####
- Fix: Random effects standard deviations were mis-estimated for time dependent predictor effects and diffusion parameters, when fitting with optimization.

6/12/2021
#### 3.5.5 ####
- Some edge case optimizer problems resolved. 
- Bug fix in discrete time plots when observational=TRUE. Correlations were unnecessarily squared previously.

22/7/2021
#### 3.5.4 ####
- Improved automatic imputation of time independent predictors, fixed bug where too many imputed values were set to zero. Care still recommended if relying on automatic imputation though!

16/6/2021
#### 3.5.3 ####
- Fixed bug in output of $rawpopcorr introduced in 3.4.3. 
  Correlations displayed incorrectly, other parameters unaffected.
- Modified correlation approach to ensure monotonicity in high dims.

31/5/2021
#### 3.5.0 ####
- Added ctFitMultiModel function to simplify processing of multiple models.
- Added ctChisqTest function for simplified likelihood ratio tests between models.
- Added subsampling optimization for first pass, faster for larger models / data.

21/4/2021
#### 3.4.3 ####
- Changed optimization scheme, first BFGS, then stochastic gradient descent.
- Fixed ctStanTIpredEffects function, much faster
- Altered correlation matrix approach -- better optimization / sampling 
  behaviour, priors can differ by index though.

10/2/2021
#### 3.4.2 ####
- ctStanDiscretePars temporal dependence plots work for discrete time also
- Fix: In certain circumstances with covariate effects on duplicated parameters, 
  the effects may not have been completely applied in the last few releases. 