@@ -1,10 +1,11 @@
 ctsem news:
 
-26/1/2023
+24/3/2023
 ####3.7.6####
-- Fix compile error for some higher dimensional non-linear models
+- Fix compile error for some higher dimensional non-linear models.
 - Fix NaN gradient error for certain non-linear measurement error models. 
 - Use Rstantools for compile specification to ensure future compatibility. 
+- Allow standardised error output from ctKalman.
 
 1/7/2022
 ####3.7.0####
